<resources>
    <string name="app_name">Proto Ramp alpha</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_ramp_controller4">RampController4</string>
    <string name="device_list_text">Click the button to refresh the device list.</string>
    <string name="up_button_label">Up</string>
    <string name="boom_up_button_label">Boom Up</string>
    <string name="boom_down_button_label">Boom Down</string>
    <string name="down_button_label">Down</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_help">Help</string>
    <string name="action_about_this_app">About This App</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_description_ramp_up_speed">Enables/Disables speed control for the Ramp Up
        button</string>
    <string name="pref_description_boom_up_speed">Enables/Disables speed control for the Boom Up
        button</string>
    <string name="pref_description_boom_down_speed">Enables/Disables speed control for the Boom
        Down button</string>
    <string name="pref_description_ramp_down_speed">Enables/Disables speed control for the Ramp
        Down button</string>
    <string name="pref_title_ramp_up_speed">Enable ramp up speed</string>
    <string name="pref_title_boom_up_speed">Enable boom up speed</string>
    <string name="pref_title_boom_down_speed">Enable boom down speed</string>
    <string name="pref_title_ramp_down_speed">Enable ramp down speed</string>
    <string name="pref_header_ramp_control">Ramp Control</string>
    <string name="airplane_mode_dialog_confirm">Done</string>
    <string name="airplane_mode_dialog_harsh_title">Warning!!!</string>
    <string name="airplane_mode_dialog_deny">Leave App</string>
    <string name="airplane_mode_dialog_title">Airplane Mode Title</string>
    <string name="airplane_mode_dialog_message">For safety reasons this app only works in Airplane
        Mode, you may set it now or leave the app. For further detail read the help section in the
        app menu.</string>
    <string name="pref_description_user_agree">The app will not run unless you agree to all terms
        found in the menu and check this box.</string>
    <string name="pref_title_user_agree">I agree to all terms.</string>

    <string name="title_activity_user_agreement">UserAgreement</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="user_agreement_checkbox_label">I am using this app at my own risk</string>
    <string name="user_agreement_title_text">Notice!</string>
    <string name="user_agreement_content_text">To make it as short as possible..,\n<b><u>DO NOT USE THIS
        APP!!!</u></b>\n\nIf you decide to use it despite my explicit request not to, you are doing so
        at your own risk.\n\nThings to consider:\n1. This is an <b>experimental</b> beta app used to
        operate <b>heavy hydraulic equipment</b> over Bluetooth.\n2. <b>Any</b> use of this app and its
        associated hardware will be done at <b><u>your own risk</u></b>.\n3. This app is provided
        \'as is\', <b>without any guarantee</b> of functionality or safety.\n4. Future versions of
        this app <b>should not</b> be assumed safer, as they might introduce some unknown bugs or
        functionality.\n\nWith that said, It is suggested that you test this app on its associated
        hardware without any load before letting any people or valuables near it.\nYou should not
        use this app or its associated hardware if your hydraulic equipment doesn\'t have some
        means to enforce an emergency stop.\nNotice that the app has no physical feedback for
        button operations so you must keep aware of your finger position while operating equipment.\n
        Also remember that all kinds of weather and work environment conditions can effect the touch
        capabilities of your device at any moment.\nAt its current unknown state this app and its
        hardware should be considered dangerous and used only for research purposes, so be aware
        and keep safe.\n\nFrom time to time further information or updated versions of these terms
        may become available on the website at:
        <a href="http://android.moransenyor.com">http://android.moransenyor.com</a>\nFor bug reports and
        assistance you can contact me at android@moransenyor.com\n\n\n</string>
    <string name="speed_bar_limit_title">Speed bar limit</string>
    <string name="no_paired_bluetooth_devices_found_message_text">No Paired Bluetooth Devices Found.</string>
    <string name="bluetooth_device_not_available_message_text">Bluetooth Device Not Available</string>
    <string name="please_turn_on_airplane_mode_message_text">Please turn on Airplane Mode</string>
    <string name="onProgressChanged_method_error_message">Error: RampController4.java class, onProgressChanged(SeekBar, int, boolean) method</string>
    <string name="connecting_status_message_text">Connecting...</string>
    <string name="please_wait_status_message_text">Please wait!!!</string>
    <string name="connection_failed_status_message_text">Connection Failed. Is it a SPP Bluetooth? Try again.</string>
    <string name="connected_status_message_text">Connected.</string>
    <string name="disconnect_method_error_message_text">Error: RampController4.java class, Disconnect() method</string>
</resources>
