<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.moransenyor.protoramp.MainActivity">
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="200"
        android:title="@string/action_disconnect" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="90"
        android:title="@string/action_help"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="80"
        android:title="@string/action_about_this_app"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
