<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_ramp_controller4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.moransenyor.protoramp.RampController4"
    tools:showIn="@layout/activity_ramp_controller4" >



    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/up_button_label"
        android:id="@+id/controller_up"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/boom_up_button_label"
        android:id="@+id/controller_boom_up"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/boom_down_button_label"
        android:id="@+id/controller_boom_down"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/down_button_label"
        android:id="@+id/controller_down"/>

    <!--<ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/up_button_label"
        android:background="@color/colorPrimary"
        android:layout_margin="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/ramp_up_orange"
        android:id="@+id/controller_up"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/boom_up_button_label"
        android:background="@color/colorPrimary"
        android:layout_margin="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/boom_up_orange"
        android:id="@+id/controller_boom_up"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/boom_down_button_label"
        android:background="@color/colorPrimary"
        android:layout_margin="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/boom_down_orange"
        android:id="@+id/controller_boom_down"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/down_button_label"
        android:background="@color/colorPrimary"
        android:layout_margin="6dp"
        android:scaleType="centerInside"
        android:src="@drawable/ramp_down_orange"
        android:id="@+id/controller_down"/>-->

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="60dp"
        android:id="@+id/controller_speed_adjuster"
        android:max="1000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="18sp"
        android:id="@+id/controller_speed_display"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="gone"
        android:id="@+id/debug_display"/>

</LinearLayout>